--- a/action.yml
+++ b/action.yml
@@ -24,7 +24,7 @@ inputs:
 
   COMMIT_MESSAGE:
     description: "Add a commit message of your choice"
-    default: "Updated waka-readme graph with new metrics"
+    default: "chore(waka2readme): update latest wakatime readme to metrics"
     required: false
 
   # content tweaks
