feat(ci): add codecov coverage action for code health

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -24,3 +24,11 @@ jobs:
       - name: Run unit tests
         run: |
           poetry run python -m unittest discover
+      - name: Codecov
+        run: |
+          pip install coverage
+          coverage run -m unittest test.py
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v2
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
