fix(ci): fix codecov command for creating tests

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Codecov
         run: |
           pip install coverage
-          coverage run -m unittest test.py
+          coverage run poetry -m unittest discover
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v2
         env:
