--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -26,8 +26,7 @@ jobs:
           poetry run python -m unittest discover
       - name: Codecov
         run: |
-          pip install coverage
-          coverage run poetry -m unittest discover
+          coverage run -m unittest discover
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v2
         env:
